# monoswap

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/: .env  file-filters.yml
.github/workflows/: build-programs.yml  build-rust-client.yml  main.yml  test-js-client.yml  test-programs.yml  test-rust-client.yml
clients/js-v1/: package.json  pnpm-lock.yaml
clients/js-v1/src/: plugin.ts
clients/js-v1/src/hooked/: index.ts
clients/js-v1/test/: _setup.ts  createSwap.test.ts  create_swap.test.ts  swap.test.ts
clients/js-v2/: README.md  package.json  pnpm-lock.yaml
clients/js-v2/test/: create.test.ts  increment.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/src/hooked/: mod.rs
clients/rust/tests/: create_swap_test.rs  helpers.rs  swap_test.rs
program/: Cargo.toml  README.md  idl.json  keypair.json
program/src/: assertions.rs  asset_detection.rs  entrypoint.rs  error.rs  instruction.rs  interface.rs  lib.rs  state.rs  transfer.rs  utils.rs
program/src/processor/: create_swap.rs  mod.rs  swap.rs  swap_asset.rs  swap_asset_spl.rs  swap_nifty.rs  swap_nifty_spl.rs  swap_spl.rs
scripts/: generate-clients.mjs  utils.mjs
scripts/client/: test-js.mjs
