[package]
name = "libreplex-monoswap"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "F7CfUwFLRk4J1wbzknbYff7ywhT6r871FCSwTHRWfr1G"
program-dependencies = [
    "AssetGtQBTSgm5s91d1RAQod5JmaZiJDxqsgtqrZud73",
    "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
    "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL",
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
shank = "^0.4.2"
mpl-token-metadata = "4.1.2"
nifty-asset = "0.1.2"
nifty-asset-types = "0.1.0"
num-derive = "^0.3"
num-traits = "^0.2"
solana-program = "<1.18"
spl-associated-token-account = { version = "2", features = ["no-entrypoint"] }
spl-token-2022 = { version = "2", features = ["no-entrypoint"] }
thiserror = "^1.0"
