[package]
name = "libreplex-monoswap-client"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "<1.18"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
nifty-asset = "0.2.0"
solana-program-test = "<1.18"
solana-sdk = "<1.18"
spl-token-2022 = "1"
spl-associated-token-account = "2.2.0"
spl-token = "4"
